--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.1",
-    "sass": "^1.58.0"
+    "sass": "^1.58.0",
     "debug": "^4.3.4"
   }
 }
